# projeto-mensageria-cliente

./: README.md  message_client.py  pyproject.toml  requirements.txt  test_messaging_http.py  test_messaging_websocket.py
src/: client.py  cliente_python.py  servidor_websocket.py
