[project]
name = "client-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ary Viana Mariano",email = "ary.vm@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "client_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
